--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,14 +9,12 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL"
+name: "Code Analysis"
 
 on:
   # push:
   #   branches: [ dev, main ]
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ dev ]
   schedule:
     - cron: '38 17 * * 2'
 
