--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,14 +2,9 @@
 
 name: 'Terraform Plan'
 on:
-  push:
-    paths-ignore:
-    - '.github/**'
-    - '**.md'
-    - '.gitignore'
+  pull_request:
     branches:
       - dev
-      - prod
 
 # Uncomment for manual run of this Terraform Plan workflow
 #on: [workflow_dispatch]
@@ -60,7 +55,7 @@ jobs:
         id: fmt
         run: |
           terraform fmt -check
-        working-directory: '.'
+        working-directory: './infrastructure'
 
 # Terraform Init, Validate, and Plan for Dev Environment
       - name: Terraform Dev Init
@@ -73,14 +68,14 @@ jobs:
             -backend-config="key=terraform.tfstate" \
             -backend-config="access_key=${{ secrets.DEV_STORAGE_ACCESS_KEY }}"
         if: github.ref == 'refs/heads/dev'
-        working-directory: '.'
+        working-directory: './infrastructure'
 
       - name: Terraform Dev Validate
         id: tf_validate_dev
         run: |
           terraform validate -no-color
         if: github.ref == 'refs/heads/dev'
-        working-directory: '.'
+        working-directory: './infrastructure'
 
       - name: Terraform Dev Plan
         id: tf_plan_dev
@@ -93,42 +88,37 @@ jobs:
           export TF_VAR_administrator_login_password=${{ secrets.DEV_PSQL_ADMIN_LOGIN }}
           terraform plan --var-file=terraform-dev.tfvars -no-color -out=plan.tfdata
         if: github.ref == 'refs/heads/dev'
-        working-directory: '.'
+        working-directory: './infrastructure'
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve plan.tfdata
-        if: github.ref == 'refs/heads/dev'
-        working-directory: '.'
-
-# Terraform Init, Validate, and Plan for Prod Environment
-      - name: Terraform Prod Init
-        id: tf_init_prod
+# Terraform Init, Validate, and Plan for Main Environment
+      - name: Terraform Main Init
+        id: tf_init_Main
         run: |
           terraform init \
             -reconfigure \
-            -backend-config="storage_account_name=${{ secrets.PROD_STORAGE_ACCOUNT_NAME }}" \
-            -backend-config="container_name=${{ secrets.PROD_STORAGE_CONTAINER_NAME }}" \
+            -backend-config="storage_account_name=${{ secrets.Main_STORAGE_ACCOUNT_NAME }}" \
+            -backend-config="container_name=${{ secrets.Main_STORAGE_CONTAINER_NAME }}" \
             -backend-config="key=terraform.tfstate" \
-            -backend-config="access_key=${{ secrets.PROD_STORAGE_ACCESS_KEY }}"
-        if: github.ref == 'refs/heads/prod'
-        working-directory: '.'
+            -backend-config="access_key=${{ secrets.Main_STORAGE_ACCESS_KEY }}"
+        if: github.ref == 'refs/heads/main'
+        working-directory: './infrastructure'
 
-      - name: Terraform Prod Validate
-        id: tf_validate_prod
+      - name: Terraform Main Validate
+        id: tf_validate_Main
         run: |
           terraform validate -no-color
-        if: github.ref == 'refs/heads/prod'
-        working-directory: '.'
+        if: github.ref == 'refs/heads/main'
+        working-directory: './infrastructure'
 
-      - name: Terraform Prod Plan
-        id: tf_plan_prod
+      - name: Terraform Main Plan
+        id: tf_plan_Main
         run: |
-          export TF_VAR_client_id=${{ secrets.PROD_ARM_CLIENT_ID }}
-          export TF_VAR_client_secret=${{ secrets.PROD_ARM_CLIENT_SECRET }}
-          export TF_VAR_tenant_id=${{ secrets.PROD_ARM_TENANT_ID }}
-          export TF_VAR_subscription_id=${{ secrets.PROD_ARM_SUBSCRIPTION_ID }}
-          export TF_VAR_admin_login=${{ secrets.PROD_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
-          export TF_VAR_administrator_login_password=${{ secrets.PROD_PSQL_ADMIN_LOGIN }}
-          terraform plan --var-file=terraform-prod.tfvars -no-color
-        if: github.ref == 'refs/heads/prod'
-        working-directory: '.'
+          export TF_VAR_client_id=${{ secrets.Main_ARM_CLIENT_ID }}
+          export TF_VAR_client_secret=${{ secrets.Main_ARM_CLIENT_SECRET }}
+          export TF_VAR_tenant_id=${{ secrets.Main_ARM_TENANT_ID }}
+          export TF_VAR_subscription_id=${{ secrets.Main_ARM_SUBSCRIPTION_ID }}
+          export TF_VAR_admin_login=${{ secrets.Main_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
+          export TF_VAR_administrator_login_password=${{ secrets.Main_PSQL_ADMIN_LOGIN }}
+          terraform plan --var-file=terraform-Main.tfvars -no-color
+        if: github.ref == 'refs/heads/main'
+        working-directory: './infrastructure'
