--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,10 +1,10 @@
-# This workflow is triggered whenever a successful Pull Request (merge) is completed on the stg and pro branch
+# This workflow is triggered by another workflow
 
 name: 'Terraform Apply'
- on: [workflow_call]
+#on: [workflow_call]
 
 # Uncomment for manual run of this Terraform Plan workflow
-# on: [workflow_dispatch]
+on: [workflow_dispatch]
 
 jobs:
   deploy-to-azure:
@@ -17,7 +17,7 @@ jobs:
 
       # Address pull_request event (in which case the $GITHUB_REF contains something not useful like refs/pull/4/merge)
       # Obtaining the target branch of the pull request: https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
-      # We will extract only the branch name of stg or prod without the refs/heads/ so we can define which steps to run
+      # We will extract only the branch name of stg or Main without the refs/heads/ so we can define which steps to run
       - name: Get branch name
         run: echo "::set-output name=branch::${GITHUB_BASE_REF#refs/heads/}"
         id: branch_check
@@ -42,40 +42,40 @@ jobs:
           terraform fmt -check
         working-directory: '.'
 
-# Terraform Init, Validate, Plan, and Apply Prod Environment
-      - name: Terraform Prod Init
-        id: tf_init_prod
+# Terraform Init, Validate, Plan, and Apply Main Environment
+      - name: Terraform Main Init
+        id: tf_init_Main
         run: |
           terraform init \
             -reconfigure \
-            -backend-config="storage_account_name=${{ secrets.PROD_STORAGE_ACCOUNT_NAME }}" \
-            -backend-config="container_name=${{ secrets.PROD_STORAGE_CONTAINER_NAME }}" \
+            -backend-config="storage_account_name=${{ secrets.Main_STORAGE_ACCOUNT_NAME }}" \
+            -backend-config="container_name=${{ secrets.Main_STORAGE_CONTAINER_NAME }}" \
             -backend-config="key=terraform.tfstate" \
-            -backend-config="access_key=${{ secrets.PROD_STORAGE_ACCESS_KEY }}"
-        if: steps.branch_check.outputs.branch == 'prod' # This defines how the step will only run if the branch name is prod
+            -backend-config="access_key=${{ secrets.Main_STORAGE_ACCESS_KEY }}"
+        if: steps.branch_check.outputs.branch == 'Main' # This defines how the step will only run if the branch name is Main
         working-directory: '.' # This terraform init will use a preconfigured Azure storage account to store the tfstate
 
-      - name: Terraform Prod Validate
-        id: tf_validate_prod
+      - name: Terraform Main Validate
+        id: tf_validate_Main
         run: |
           terraform validate -no-color
-        if: steps.branch_check.outputs.branch == 'prod' # This defines how the step will only run if the branch name is prod
+        if: steps.branch_check.outputs.branch == 'Main' # This defines how the step will only run if the branch name is Main
         working-directory: '.'
 
-      - name: Terraform Prod Plan
-        id: tf_plan_prod
+      - name: Terraform Main Plan
+        id: tf_plan_Main
         run: |
-          export TF_VAR_client_id=${{ secrets.PROD_ARM_CLIENT_ID }}
-          export TF_VAR_client_secret=${{ secrets.PROD_ARM_CLIENT_SECRET }}
-          export TF_VAR_tenant_id=${{ secrets.PROD_ARM_TENANT_ID }}
-          export TF_VAR_subscription_id=${{ secrets.PROD_ARM_SUBSCRIPTION_ID }}
-          export TF_VAR_admin_login=${{ secrets.PROD_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
-          export TF_VAR_administrator_login_password=${{ secrets.PROD_PSQL_ADMIN_LOGIN }}
-          terraform plan --var-file=terraform-prod.tfvars -no-color -out=plan.tfdata
-        if: steps.branch_check.outputs.branch == 'prod' # This defines how the step will only run if the branch name is prod
+          export TF_VAR_client_id=${{ secrets.Main_ARM_CLIENT_ID }}
+          export TF_VAR_client_secret=${{ secrets.Main_ARM_CLIENT_SECRET }}
+          export TF_VAR_tenant_id=${{ secrets.Main_ARM_TENANT_ID }}
+          export TF_VAR_subscription_id=${{ secrets.Main_ARM_SUBSCRIPTION_ID }}
+          export TF_VAR_admin_login=${{ secrets.Main_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
+          export TF_VAR_administrator_login_password=${{ secrets.Main_PSQL_ADMIN_LOGIN }}
+          terraform plan --var-file=terraform-Main.tfvars -no-color -out=plan.tfdata
+        if: steps.branch_check.outputs.branch == 'Main' # This defines how the step will only run if the branch name is Main
         working-directory: '.' # This terraform plan exports the GitHub secrets and uses TF_VAR so the terraform files can use the variable values. The plan is also output to plan.tfdata for apply later
 
       - name: Terraform Apply
         run: terraform apply -auto-approve plan.tfdata # Use the previous terraform plan output to apply
-        if: steps.branch_check.outputs.branch == 'prod' # This defines how the step will only run if the branch name is prod
+        if: steps.branch_check.outputs.branch == 'Main' # This defines how the step will only run if the branch name is Main
         working-directory: '.'
