--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -1,8 +1,4 @@
 name: 'Terraform Destroy'
-#on:
-#  push:
-#    branches:
-#      - dev
 
 on: [workflow_dispatch]
 
@@ -64,47 +60,47 @@ jobs:
         if: github.ref == 'refs/heads/dev'
         working-directory: '.'
 
-# Terraform Init, Validate, Plan, and Destroy Prod Environment
-      - name: Terraform Prod Init
-        id: tf_init_prod
+# Terraform Init, Validate, Plan, and Destroy Main Environment
+      - name: Terraform Main Init
+        id: tf_init_Main
         run: |
           terraform init \
             -reconfigure \
-            -backend-config="storage_account_name=${{ secrets.PROD_STORAGE_ACCOUNT_NAME }}" \
-            -backend-config="container_name=${{ secrets.PROD_STORAGE_CONTAINER_NAME }}" \
+            -backend-config="storage_account_name=${{ secrets.Main_STORAGE_ACCOUNT_NAME }}" \
+            -backend-config="container_name=${{ secrets.Main_STORAGE_CONTAINER_NAME }}" \
             -backend-config="key=terraform.tfstate" \
-            -backend-config="access_key=${{ secrets.PROD_STORAGE_ACCESS_KEY }}"
-        if: github.ref == 'refs/heads/prod'
+            -backend-config="access_key=${{ secrets.Main_STORAGE_ACCESS_KEY }}"
+        if: github.ref == 'refs/heads/Main'
         working-directory: '.'
 
-      - name: Terraform Prod Validate
-        id: tf_validate_prod
+      - name: Terraform Main Validate
+        id: tf_validate_Main
         run: |
           terraform validate -no-color
-        if: github.ref == 'refs/heads/prod'
+        if: github.ref == 'refs/heads/Main'
         working-directory: '.'
 
-      - name: Terraform Prod Plan
-        id: tf_plan_prod
+      - name: Terraform Main Plan
+        id: tf_plan_Main
         run: |
-          export TF_VAR_client_id=${{ secrets.PROD_ARM_CLIENT_ID }}
-          export TF_VAR_client_secret=${{ secrets.PROD_ARM_CLIENT_SECRET }}
-          export TF_VAR_tenant_id=${{ secrets.PROD_ARM_TENANT_ID }}
-          export TF_VAR_subscription_id=${{ secrets.PROD_ARM_SUBSCRIPTION_ID }}
-          export TF_VAR_admin_login=${{ secrets.PROD_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
-          export TF_VAR_administrator_login_password=${{ secrets.PROD_PSQL_ADMIN_LOGIN }}
-          terraform plan --var-file=terraform-prod.tfvars -no-color
-        if: github.ref == 'refs/heads/prod'
+          export TF_VAR_client_id=${{ secrets.Main_ARM_CLIENT_ID }}
+          export TF_VAR_client_secret=${{ secrets.Main_ARM_CLIENT_SECRET }}
+          export TF_VAR_tenant_id=${{ secrets.Main_ARM_TENANT_ID }}
+          export TF_VAR_subscription_id=${{ secrets.Main_ARM_SUBSCRIPTION_ID }}
+          export TF_VAR_admin_login=${{ secrets.Main_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
+          export TF_VAR_administrator_login_password=${{ secrets.Main_PSQL_ADMIN_LOGIN }}
+          terraform plan --var-file=terraform-Main.tfvars -no-color
+        if: github.ref == 'refs/heads/Main'
         working-directory: '.'
 
-      - name: Terraform Prod Destroy
+      - name: Terraform Main Destroy
         run: |
-          export TF_VAR_client_id=${{ secrets.PROD_ARM_CLIENT_ID }}
-          export TF_VAR_client_secret=${{ secrets.PROD_ARM_CLIENT_SECRET }}
-          export TF_VAR_tenant_id=${{ secrets.PROD_ARM_TENANT_ID }}
-          export TF_VAR_subscription_id=${{ secrets.PROD_ARM_SUBSCRIPTION_ID }}
-          export TF_VAR_admin_login=${{ secrets.PROD_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
-          export TF_VAR_administrator_login_password=${{ secrets.PROD_PSQL_ADMIN_LOGIN }}
-          terraform apply -destroy -auto-approve --var-file=terraform-prod.tfvars
-        if: github.ref == 'refs/heads/prod'
+          export TF_VAR_client_id=${{ secrets.Main_ARM_CLIENT_ID }}
+          export TF_VAR_client_secret=${{ secrets.Main_ARM_CLIENT_SECRET }}
+          export TF_VAR_tenant_id=${{ secrets.Main_ARM_TENANT_ID }}
+          export TF_VAR_subscription_id=${{ secrets.Main_ARM_SUBSCRIPTION_ID }}
+          export TF_VAR_admin_login=${{ secrets.Main_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
+          export TF_VAR_administrator_login_password=${{ secrets.Main_PSQL_ADMIN_LOGIN }}
+          terraform apply -destroy -auto-approve --var-file=terraform-Main.tfvars
+        if: github.ref == 'refs/heads/Main'
         working-directory: '.'
