--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -26,14 +26,17 @@ jobs:
             -backend-config="key=terraform.tfstate" \
             -backend-config="access_key=${{ secrets.DEV_STORAGE_ACCESS_KEY }}"
         if: github.ref == 'refs/heads/dev'
-        working-directory: '.'
+        working-directory: '/infrastructure'
+
+
 
       - name: Terraform Dev Validate
         id: tf_validate_dev
         run: |
           terraform validate -no-color
         if: github.ref == 'refs/heads/dev'
-        working-directory: '.'
+        working-directory: '/infrastructure'
+
 
       - name: Terraform Dev Plan
         id: tf_plan_dev
@@ -46,7 +49,9 @@ jobs:
           export TF_VAR_administrator_login_password=${{ secrets.DEV_PSQL_ADMIN_LOGIN }}
           terraform plan --var-file=terraform-dev.tfvars -no-color
         if: github.ref == 'refs/heads/dev'
-        working-directory: '.'
+        working-directory: '/infrastructure'
+
+
 
       - name: Terraform Dev Destroy
         run: |
@@ -58,7 +63,9 @@ jobs:
           export TF_VAR_administrator_login_password=${{ secrets.DEV_PSQL_ADMIN_LOGIN }}
           terraform apply -destroy -auto-approve --var-file=terraform-dev.tfvars
         if: github.ref == 'refs/heads/dev'
-        working-directory: '.'
+        working-directory: '/infrastructure'
+
+
 
 # Terraform Init, Validate, Plan, and Destroy Main Environment
       - name: Terraform Main Init
@@ -71,14 +78,18 @@ jobs:
             -backend-config="key=terraform.tfstate" \
             -backend-config="access_key=${{ secrets.Main_STORAGE_ACCESS_KEY }}"
         if: github.ref == 'refs/heads/Main'
-        working-directory: '.'
+        working-directory: '/infrastructure'
+
+
 
       - name: Terraform Main Validate
         id: tf_validate_Main
         run: |
           terraform validate -no-color
         if: github.ref == 'refs/heads/Main'
-        working-directory: '.'
+        working-directory: '/infrastructure'
+
+
 
       - name: Terraform Main Plan
         id: tf_plan_Main
@@ -91,7 +102,9 @@ jobs:
           export TF_VAR_administrator_login_password=${{ secrets.Main_PSQL_ADMIN_LOGIN }}
           terraform plan --var-file=terraform-Main.tfvars -no-color
         if: github.ref == 'refs/heads/Main'
-        working-directory: '.'
+        working-directory: '/infrastructure'
+
+
 
       - name: Terraform Main Destroy
         run: |
@@ -103,4 +116,5 @@ jobs:
           export TF_VAR_administrator_login_password=${{ secrets.Main_PSQL_ADMIN_LOGIN }}
           terraform apply -destroy -auto-approve --var-file=terraform-Main.tfvars
         if: github.ref == 'refs/heads/Main'
-        working-directory: '.'
+        working-directory: '/infrastructure'
+
