--- a/.github/workflows/build-dev-image.yml
+++ b/.github/workflows/build-dev-image.yml
@@ -5,7 +5,9 @@ on:
   # push:
   #   branches:
   #     - dev
-
+env:
+  REGISTRY_NAME: ibmdevopsdemo
+  APP_NAME: weather-api
 jobs:
   build-image-weather-api:
     runs-on: ubuntu-latest
@@ -14,7 +16,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: azure/docker-login@v1
         with:
-          login-server: ibmdevopsdemo.azurecr.io
+          login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
           username: ${{secrets.DEV_ACR_SP_ID}}
           password: ${{secrets.DEV_ACR_SP_PASSWORD}}
       - name: Build and push to ACR
@@ -23,8 +25,8 @@ jobs:
         env:
           COMPOSE_DOCKER_CLI_BUILD: 1
           DOCKER_BUILDKIT: 1
-          IMAGE: ibmdevopsdemo.azurecr.io/weather-api:dev.v${{github.run_number}}
-          IMAGE_LATEST: ibmdevopsdemo.azurecr.io/weather-api:latest
+          IMAGE: ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:dev.v${{github.run_number}}
+          IMAGE_LATEST: ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:latest
         run: |
           docker build \
             --tag ${IMAGE} \
