--- a/.github/workflows/main-deployment.yml
+++ b/.github/workflows/main-deployment.yml
@@ -1,10 +1,9 @@
 name: Build & Push Image
 
 on:
-  pull_request:
-  # push:
-  #   branches:
-  #     - dev
+  push:
+    branches:
+      - dev
 jobs:
   build-api-image-push-to-acr:
     uses: /.github/workflows/build-dev-image.yml
