--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -40,7 +40,7 @@ jobs:
         id: fmt
         run: |
           terraform fmt -check
-        working-directory: '/infrastructure'
+        working-directory: './Infrastructure'
 
 
 
