update workflow call

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -74,7 +74,7 @@ jobs:
             -backend-config="container_name=${{ secrets.DEV_STORAGE_CONTAINER_NAME }}" \
             -backend-config="key=terraform.tfstate" \
             -backend-config="access_key=${{ secrets.DEV_STORAGE_ACCESS_KEY }}"
-        if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
+       # if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
         working-directory: './Infrastructure'
 
  # This terraform init will use a preconfigured Azure storage account to store the tfstate
@@ -83,7 +83,7 @@ jobs:
         id: tf_validate_Dev
         run: |
           terraform validate -no-color
-        if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
+        #if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
         working-directory: './Infrastructure'
 
 
@@ -98,13 +98,13 @@ jobs:
           export TF_VAR_admin_login=${{ secrets.DEV_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
           export TF_VAR_administrator_login_password=${{ secrets.DEV_PSQL_ADMIN_LOGIN }}
           terraform plan --var-file=terraform-dev.tfvars -no-color -out=plan.tfdata
-        if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
+       # if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
         working-directory: './Infrastructure'
 
  # This terraform plan exports the GitHub secrets and uses TF_VAR so the terraform files can use the variable values. The plan is also output to plan.tfdata for apply later
 
       - name: Terraform Apply
         run: terraform apply -auto-approve plan.tfdata # Use the previous terraform plan output to apply
-        if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
+       # if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
         working-directory: './Infrastructure'
 
