update workflow call

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -95,8 +95,8 @@ jobs:
           export TF_VAR_client_secret=${{ secrets.DEV_ARM_CLIENT_SECRET }}
           export TF_VAR_tenant_id=${{ secrets.DEV_ARM_TENANT_ID }}
           export TF_VAR_subscription_id=${{ secrets.DEV_ARM_SUBSCRIPTION_ID }}
-          export TF_VAR_admin_login=${{ secrets.DEV_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
-          export TF_VAR_administrator_login_password=${{ secrets.DEV_PSQL_ADMIN_LOGIN }}
+          export TF_VAR_admin_login=${{ secrets.DEV_PSQL_ADMIN_LOGIN }}
+          export TF_VAR_administrator_login_password=${{ secrets.DEV_PSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
           terraform plan --var-file=terraform-dev.tfvars -no-color -out=plan.tfdata
        # if: steps.branch_check.outputs.branch == 'dev' # This defines how the step will only run if the branch name is Main
         working-directory: './Infrastructure'
