--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   selector:
     name: weather-api
+  type: LoadBalancer
   ports:
     - name: http
-      port: 8080
+      port: 80
       targetPort: 8080
       # nodePort: 30802
