--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -19,10 +19,10 @@ spec:
   template:
     metadata:
       labels:
-        name: weather-api
+        name: weather-app
     spec:
       containers:
         - image: ibmdevopsdemo.azurecr.io/weather-api:latest
-          name: weather-api
+          name: weather-app
           imagePullPolicy: Always
       restartPolicy: Always
