--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,10 +1,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: weather-api-svc
+  name: weather-app-svc
 spec:
   selector:
-    name: weather-api
+    name: weather-app
   type: LoadBalancer
   ports:
     - name: http
