--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,9 +1,9 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: weather-api
+  name: weather-app
   labels:
-    name: "weather-api"
+    name: "weather-app"
     environment: "development"   
      
 spec:
